Hopefully fixed images on mobile

--- a/style.css
+++ b/style.css
@@ -111,3 +111,9 @@ main#gallery {
     display: flex;
     cursor: move;
 }
+
+@media screen and (max-width: 600px){
+    img {
+        max-width: 200px;
+    }
+}
